fix(block): overflow caused by deco

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,9 @@
 	--rsm-weight-dark: 770;
 	--rsm-weight-black: 900;
 }
+html {
+	overflow-x: hidden;
+}
 body {
     font-family: 'Valve Oracle', sans-serif;
     background-color: black;
